feat: Geminiを用いた自然言語の解析モジュールを実装

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,9 @@ pytest
 # Google Calendar API
 google-api-python-client == 1.7.2
 google-auth-oauthlib == 0.4.1
+
+# Gemini API
+google-generativeai
+
+# .env support
+python-dotenv
